syntax = "proto3";
option csharp_namespace = "Phorkus.Proto";

import "default.proto";
import "transaction.proto";

message Validator {
    uint32 version = 1;
    UInt256 prev_hash = 2;
    uint64 block_index = 3;
    uint32 validator_index = 4;
    uint64 timestamp = 5;
    uint32 view_number = 6;
}

message ChangeViewRequest {
    Validator validator = 1;
    uint32 new_view_number = 2;
}

message BlockPrepareRequest {
    Validator validator = 1;
    uint64 nonce = 2;
    repeated UInt256 transaction_hashes = 3;
    Transaction miner_transaction = 4;
    uint64 timestamp = 5;
    Signature signature = 6;
}

message BlockPrepareReply {
    Validator validator = 1;
    Signature signature = 2;
}